# file2json

./: LICENSE  Makefile  README.md  pyproject.toml
file2json/: __init__.py  __main__.py  converter.py
tests/: __init__.py  test_converter.py
